# TrackingExperimentation

./: CMakeLists.txt  main.cpp
core/: tracker.h
core/result_structures/: correction_controller.cpp  correction_controller.h  tracking_result.cpp  tracking_result.h
core/trackers/: kcf.cpp  kcf.h  medianflow.cpp  medianflow.h
core/trackers/core_utils/: core_utils.h  errors.h
tests/: CoreUtilsTest.cpp  CorrectionControllerTest.cpp  KCFTest.cpp  MedianFlowTest.cpp  TrackingResultTest.cpp
utils/: constants.h  tracker_creator.h  tracker_type.h
